feat/adding-api-infra-config

--- a/.env.template
+++ b/.env.template
@@ -1,2 +1,7 @@
 # Frontend settings
 FRONTEND_SERVER_PORT = 3000
+
+# Backend settings
+DEBUG = True
+SERVER_PORT = 8000
+ALLOWER_CORS_ORIGINS = "..."
